Fix https://github.com/Tradeshift/tradeshift-ui/issues/145
Title would drop in IE9 and IE10

--- a/spec/jasmine/ts.css
+++ b/spec/jasmine/ts.css
@@ -3325,7 +3325,6 @@ i svg use {
 }
 .ts-toolbar-menu.ts-left {
   left: 0;
-  width: 100px;
 }
 .ts-toolbar-menu.ts-right {
   right: 0;
